# deck_creator

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml
projects/italy-2026/output/: index.html  italy-dashboard-mobile-v1.html  italy-dashboard-mobile-v3.html  italy-dashboard.html
projects/italy-2026/output/.netlify/: netlify.toml
projects/italy-2026/sources/: 2026 Italy Itinerary.md
projects/italy-2026/workspace/: build-v3.js  build.js  generate-mobile.py  thumbnails.js
projects/italy-2026/workspace/slides/: s01.html  s02.html  s03.html  s04.html  s05.html  s06.html  s07.html  s08.html  s09.html  s10.html  s11.html  s12.html  s13.html  s14.html  s15.html  s16.html  s17.html  s18.html  s19.html  s20.html  s21.html  s22.html  s23.html
