[project]
name = "deck-creator"
version = "0.1.0"
description = "Multi-purpose presentation and deck creation workspace"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "Jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
